--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,7 +38,8 @@ html {
   }
 
   button {
-    @apply cursor-pointer shadow-xl shadow-gray-400 rounded-xl uppercase bg-[tan] text-black hover:bg-[black] hover:text-[tan]
+    @apply cursor-pointer shadow-xl shadow-gray-400 rounded-xl uppercase bg-[tan] text-black hover:bg-[black] hover:text-[tan] 
+    ease-in-out duration-300
   }
 
   .section-name {
