--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,12 +69,14 @@ html {
   }
 }
 
-/* body {
-  color: rgb(var(--foreground-rgb));
+body {
+  /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
-} */
+    rgb(var(--background-start-rgb)); */
+    /* background-image: url(../../public/assets/background-2.jpg);
+    background-repeat: no-repeat; */
+}
